# cvmatio

./: CMakeLists.txt
include/: MatlabIO.hpp  typetraits.hpp
src/: CMakeLists.txt  MatlabIO.cpp  main.cpp
src/cmake/: Config.cmake.in
